feat: enhance UI components and animations
- Added new dependencies: class-variance-authority, motion, radix-ui, and tw-animate-css for improved styling and animations.
- Updated Button component to include a flex layout for better alignment of children elements.
- Enhanced SpaceBackground component by increasing the number of stars and refining the animation styles.
- Modified index.css to include new animation delays and a glow-text utility for enhanced visual effects.
- Revamped Hero section with new content layout, including animated buttons and improved text styling.
- Introduced BorderBeamButton component for a unique button design with animated border effects.
- Added editorconfig and jsconfig for consistent coding standards and improved path resolution.

--- a/biome.json
+++ b/biome.json
@@ -13,10 +13,7 @@
 		"indentStyle": "tab"
 	},
 	"linter": {
-		"enabled": true,
-		"a11y": {
-			"useButtonType": "off"
-		}
+		"enabled": true
 	},
 	"javascript": {
 		"formatter": {
